--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>'25年度草谷研究室スケジュール表</title>
+    <title>'25年度4年生草谷ゼミナールスケジュール表</title>
     <style>
         body {
             font-family: Arial, sans-serif;
