--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </a>
     </p>
     <div class="comment-box">
-        <h2>連絡事項</h2>
-        <textarea id="commentInput" placeholder="送信者名／メッセージの順で，ここに連絡事項を入力してください..."></textarea>
+        <h2>有言実行・不実行掲示板（連絡事項）</h2>
+        <textarea id="commentInput" placeholder="送信者名-メッセージの順で，ここに連絡事項を入力してください..."></textarea>
         <br>
         <button onclick="submitComment()">送信</button>
     </div>
