--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-    <h1>'25年度草谷研究室スケジュール表</h1>
+    <h1>'25年度4年生草谷ゼミスケジュール表</h1>
     <h2>スケジュール表</h2>
 
     <div class="spreadsheet-container">
