--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
     <div class="comment-list" id="commentList">
         <h2>過去のコメント</h2>
     </div>
+    <h2>編集用URL（小山用）</h2>
+    <p>
+      <a href="https://github.co.jp/" target="_blank">
+        github
+      </a>
+      <a href="https://console.firebase.google.com/u/0/" target="_blank">
+        コメントデータ保存先
+      </a>
+    </p>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
