--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="comment-list" id="commentList">
         <h2>過去のコメント</h2>
     </div>
-    <h2>編集用URL（小山用）</h2>
+    <h2>雑多URL</h2>
     <ul>
     <li>
       <p>
@@ -91,6 +91,13 @@
       <p>
       <a href="https://console.firebase.google.com/u/0/" target="_blank">
         コメントデータ保存先
+      </a>
+      </p>
+    </li>   
+    <li>
+      <p>
+      <a href="https://indoor-flight.com/" target="_blank">
+        ひこロボHP
       </a>
       </p>
     </li>   
